Fix layout issues on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -70,6 +70,7 @@ button::-moz-focus-inner {
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Montserrat, sans-serif;
+  line-height: 1.1;
 }
 img {
   border-style: none;
