--- a/src/pages/research/research.css
+++ b/src/pages/research/research.css
@@ -36,6 +36,8 @@
 }
 
 .research__links {
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 30px;
 }
 .research__links > a {
