--- a/src/pages/resources/resources.css
+++ b/src/pages/resources/resources.css
@@ -45,6 +45,8 @@
 }
 
 .resources__links {
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 30px;
 }
 .resources__links > a {
